--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
     width: 100%;
     padding: 30px 0;
     font-family: 'Ubuntu',sans-serif;
+    z-index: 999;
     transition:all 0.3s ease ;
 }
 .navbar.sticky{
@@ -84,11 +85,199 @@
 .home .home-content .text-3 span{
     color:#00804b;
     font-weight: 500;
-
+}
+.home .home-content a{
+    display: inline-block;
+    background:#00804b;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 32px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #00804b;
+}
+.home .home-content a:hover{
+    color:#00804b;
+    background: none;
 }
 /* Menu */
 .menu-btn{
     color:#fff;
-    font-size: 23px;
+    font-size: 26px;
     cursor:pointer;
+    display: none;
+}
+/* Sobre */
+section{
+    padding: 100px 0;
+}
+.about{
+    font-family: 'Roboto',sans-serif;
+}
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .title{
+    font-family: 'Ubutun',sans-serif;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    position: relative;
+}
+.about .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "Quem sou eu";
+    position: absolute;
+    bottom:-14px;
+    left: 50%;
+    font-size: 20px;
+    background: #fff;
+    color: #00804b;
+    padding: 5px;
+    transform: translateX(-50%);
+}
+.about .about-content .left{
+    width: 45%;
+}
+.about .about-content .right{
+    width: 55%;
+}
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+    color: #00804b;
+}
+.about .about-content .right p{
+    text-align: justify;
+
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: #00804b;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #00804b;
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    background: none;
+    color: #00804b;
+}
+.about .about-content .left img{
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+/* Responsividade */
+
+@media (max-width: 1300px){
+    .navbar .max-width{
+        margin-left: 0;       
+    }
+}
+@media(max-width:1104px){
+    .about .about-content .left img{
+        width:350px;
+        height: 350px;
+
+    }
+}
+@media (max-width: 991px){
+    .navbar .max-width{
+        padding: 0 50px;     
+    }
+}
+@media (max-width: 970px){
+    .max-width{
+        padding: 0 50px;
+        max-width: 800px;
+    }
+    .menu-btn{
+        display:block;
+        z-index: 999;
+    }
+    .navbar .menu{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: -100%;
+        top: 0;
+        background: #111;
+        padding-top: 80px;
+        text-align: center;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active{
+        left: 0;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+    .about .about-content .colunm{
+        width: 50%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex:100%;
+    }
+}
+@media (max-width: 690px){
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+    }
+}
+@media (max-width: 560px){
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
 }
